- duplicate layouts % russian layouts, added missing keys % ukrainian layouts are moved under 'UA' code % East layouts, set correct letters instead of the 'ligatures' - ligatures + keyboard key constants, keyboard constants bitmap + 'alted' letter state + checks on layouts addition % the way, layouts are getting processed, get rid of the boring and slow Array.indexOf method % buttons generation routine - all parts are created in a single pass % toggleShift method, made it compatible with the future 'Alt' layout toggling % event handlers to process keyboard modes bitmap - some old junk code + keymap conversion on load to have faster keymap processing
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@123 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/keyboard/keyboard.css
+++ b/keyboard/keyboard.css
@@ -103,8 +103,9 @@ td #virtualKeyboard, div #virtualKeyboard, p #virtualKeyboard {
         text-align: center;
 }
 #virtualKeyboard #kbDesk div.kbButton span.shifted {
+        color: green;
         font-family: Verdana;
-        font-size: 7.5pt;
+        font-size: 6pt;
         height: 100%;
         line-height: 1.1;
         position: absolute;
@@ -114,10 +115,23 @@ td #virtualKeyboard, div #virtualKeyboard, p #virtualKeyboard {
         vertical-align: bottom;
         width: 100%;
 }
+#virtualKeyboard #kbDesk div.kbButton span.alted {
+        color: blue;
+        font-family: Verdana;
+        font-size: 6pt;
+        height: 100%;
+        line-height: 1.1;
+        position: absolute;
+        right: 7px;
+        top: 0px;
+        text-transform: none;
+        vertical-align: bottom;
+        width: 100%;
+}
 #virtualKeyboard #kbDesk div.kbButton span.normal {
         position: absolute;
         bottom: 4px;
-        left: 4px;
+        left: 5px;
         text-indent: 0;
 }
 #virtualKeyboard #kbDesk span.deadKey {
